# nostr-did

./: Cargo.toml  LICENSE-MIT  README.md  test-vectors.json
.github/workflows/: ci.yml
examples/: demo.rs  generate_test_vectors.rs
nostr-did/: .gitignore  Cargo.toml  LICENSE-APACHE
nostr-did/scripts/: setup.sh
nostr-did/src/: document.rs
src/: document.rs  lib.rs
